--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "react-router-dom": "^7.8.1",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.4.17",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "firebase": "^12.4.0",
+    "react-hot-toast": "^2.6.0",
+    "zustand": "^5.0.8",
+    "jwt-decode": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
