--- a/package.json
+++ b/package.json
@@ -8,17 +8,18 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.11.0",
+    "firebase": "^12.4.0",
+    "jwt-decode": "^4.0.0",
+    "lottie-react": "^2.4.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.1",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.4.17",
     "web-vitals": "^2.1.4",
-    "firebase": "^12.4.0",
-    "react-hot-toast": "^2.6.0",
-    "zustand": "^5.0.8",
-    "jwt-decode": "^4.0.0"
+    "zustand": "^5.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
